# Pong

cpp_impl/: .gitignore  CMakeLists.txt  README.md
cpp_impl/src/: CMakeLists.txt  ball.h  color.h  constants.h  controller.cpp  controller.h  game_object.h  main.cpp  model.cpp  model.h  paddle.h  platform.cpp  platform.h  platform_controller.cpp  player.cpp  player.h  player_collision_detector.cpp  position.h  texture.cpp  texture.h  util.cpp  util.h  view.cpp  view.h
godot/: Paddle.gd  ball.gd  ball.tscn  icon.svg.import  main.gd  main.tscn  paddle.tscn  project.godot  wall.gd  wall.tscn
gradle/wrapper/: gradle-wrapper.properties
nbproject/: project.properties
pong/: build.gradle.kts  settings.gradle.kts
pong/src/main/java/com/github/goldy1992/: Main.java  Main.java.old
pong/src/main/java/com/github/goldy1992/pongmvc/: AI.java  Controller.java  GameArea.java  GameArea1.java  GameDimensions.java  Model.java  Paddle.java  Pong.java  View.java
python_impl/: .gitignore  app.py  constants.py  controller.py  paddle.py  particles.py  rotate_rect.py
python_impl/classes/: AI.java  Ball.java  GameArea.java  GameArea1.java.old  GameDimensions.java  MenuBar.java  Model.py  Point.java  ScorePanel.java  View.java  ball.py  controller.py  model.py  util.py  view.py
src/: Main.java
src/pongmvc/: AI.java  Ball.java  Controller.java  GameArea.java  GameArea1.java  GameDimensions.java  MenuBar.java  Model.java  Paddle.java  Point.java  Pong.java  ScorePanel.java  View.java
